@@ -342,70 +342,6 @@ namespace Mono.Unix {
 			return rval;
 		}
 
-		[DllImport (LIB, EntryPoint="Mono_Posix_FromMountFlags")]
-		private static extern int FromMountFlags (MountFlags value, out UInt64 rval);
-
-		public static bool TryFromMountFlags (MountFlags value, out UInt64 rval)
-		{
-			return FromMountFlags (value, out rval) == 0;
-		}
-
-		public static UInt64 FromMountFlags (MountFlags value)
-		{
-			UInt64 rval;
-			if (FromMountFlags (value, out rval) == -1)
-				ThrowArgumentException (value);
-			return rval;
-		}
-
-		[DllImport (LIB, EntryPoint="Mono_Posix_ToMountFlags")]
-		private static extern int ToMountFlags (UInt64 value, out MountFlags rval);
-
-		public static bool TryToMountFlags (UInt64 value, out MountFlags rval)
-		{
-			return ToMountFlags (value, out rval) == 0;
-		}
-
-		public static MountFlags ToMountFlags (UInt64 value)
-		{
-			MountFlags rval;
-			if (ToMountFlags (value, out rval) == -1)
-				ThrowArgumentException (value);
-			return rval;
-		}
-
-		[DllImport (LIB, EntryPoint="Mono_Posix_FromUmountFlags")]
-		private static extern int FromUmountFlags (UmountFlags value, out Int32 rval);
-
-		public static bool TryFromUmountFlags (UmountFlags value, out Int32 rval)
-		{
-			return FromUmountFlags (value, out rval) == 0;
-		}
-
-		public static Int32 FromUmountFlags (UmountFlags value)
-		{
-			Int32 rval;
-			if (FromUmountFlags (value, out rval) == -1)
-				ThrowArgumentException (value);
-			return rval;
-		}
-
-		[DllImport (LIB, EntryPoint="Mono_Posix_ToUmountFlags")]
-		private static extern int ToUmountFlags (Int32 value, out UmountFlags rval);
-
-		public static bool TryToUmountFlags (Int32 value, out UmountFlags rval)
-		{
-			return ToUmountFlags (value, out rval) == 0;
-		}
-
-		public static UmountFlags ToUmountFlags (Int32 value)
-		{
-			UmountFlags rval;
-			if (ToUmountFlags (value, out rval) == -1)
-				ThrowArgumentException (value);
-			return rval;
-		}
-
 		[DllImport (LIB, EntryPoint="Mono_Posix_FromWaitOptions")]
 		private static extern int FromWaitOptions (WaitOptions value, out Int32 rval);
 
